data/all_generated_tests/raw_wast_tests/if_InfiniteLoops_1575.wast
;; 6. **Test 6**: Implement a recursive `if` instruction within a `loop` that conditionally breaks out using `br_if`. Validate if state management errors in re-initialization (or lack thereof) lead to infinite loop scenarios.

(assert_invalid
  (module
    (func $recursive-loop-if
      (block $exit
        (loop $continue
          (i32.const 1)
          (br_if $exit) ; Breaks if true
          (if (i32.const 0) ; Always false, shouldn't execute (then)
            (then (br $continue)) ; This should cause an invalid recursion error
          )
        )
      )
    )
  )
  "type mismatch"
)